--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1>welcome mahmoud look what i made it for you </h1>
+<h1>welcome mhmoud look what i made it for you </h1>
 <script src="main.js">  </script>
 <body>
 </html>
