--- a/index.html
+++ b/index.html
@@ -5,10 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
+    
+<h1>welcome  </h1>
+<h1>+</h1>
+<input id="id1">
+<input id="id2">
+<button onclick="myFunction()">Try it</button>
+<br>
+<p id="demo"></p>
 
-<h1>welcome mahmoud look what i made it for you </h1>
-<script src="main.js">  </script>
-<body>
+<h1>-</h1>
+<input id="id3">
+<input id="id4">
+<button onclick="myFunction2()">Try it</button>
+<br>
+<p id="demo2"></p>
+<h1>/</h1>
+<input id="id5">
+<input id="id6">
+<button onclick="myFunction3()">Try it</button>
+<br>
+<p id="demo3"></p>
+<h1>x</h1>
+<input id="id7">
+<input id="id8">
+<button onclick="myFunction4()">Try it</button>
+<br>
+<p id="demo4"></p>
+
+<body><script src="main.js">  </script>
+
 </html>
