change the color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<h1>welcome  </h1>
+<h1>welcome to my new world </h1>
 <h1>+</h1>
 <input id="id1">
 <input id="id2">
@@ -38,5 +38,5 @@
 
 <body><script src="main.js">  </script>
 
-    
+
 </html>
